plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.google.gms.google.services)
}

android {
    namespace 'com.supergym.sep490_supergymmanagement'
    compileSdk 34

    buildFeatures {
        buildConfig = false
    }

    defaultConfig {
        applicationId "com.supergym.sep490_supergymmanagement"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"
        renderscriptTargetApi 21
        renderscriptSupportModeEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    buildFeatures{
        viewBinding true
        dataBinding true
        buildConfig true
        viewBinding {
            enabled = true
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    //Implement Support for API
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.google.mlkit:face-detection:16.1.5'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'com.google.android.flexbox:flexbox:3.0.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.fragment:fragment-ktx:1.6.1'

    //Implement for the Circular Progress Bar
    implementation 'androidx.gridlayout:gridlayout:1.1.0-beta01'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    //implement chart graph
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    implementation 'com.google.android.flexbox:flexbox:3.0.0'
    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
    implementation 'com.google.zxing:core:3.4.1'
    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.google.firebase:firebase-firestore:24.5.0'


    // Import the BoM for the Firebase platform
    implementation(platform("com.google.firebase:firebase-bom:33.3.0"))

    // Add the dependency for the Firebase Authentication library
    // When using the BoM, you don't specify versions in Firebase library dependencies

    // Also add the dependency for the Google Play services library and specify its version
    implementation("com.google.android.gms:play-services-auth:21.2.0")

    implementation libs.appcompat
    implementation libs.material
    implementation 'androidx.appcompat:appcompat:1.5.1'
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.firebase.auth
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    implementation libs.gridlayout
    implementation libs.recyclerview
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    // Import the BoM for the Firebase platform
    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
    implementation 'com.google.firebase:firebase-database:20.0.4'
    implementation 'com.google.firebase:firebase-storage:20.0.4'
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    implementation("com.google.firebase:firebase-auth")
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation("com.google.ai.client.generativeai:generativeai:0.6.0")
    implementation("com.google.guava:guava:31.0.1-android")

    implementation("org.reactivestreams:reactive-streams:1.0.4")
    //FaceRecognition Dependency
    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
    implementation 'org.tensorflow:tensorflow-lite-gpu:2.4.0'
    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'




    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'

    // camera x
    def camerax_version = "1.0.2"
    implementation "androidx.camera:camera-core:${camerax_version}"
    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
    implementation "androidx.camera:camera-camera2:${camerax_version}"
    implementation "androidx.camera:camera-view:1.0.0-alpha32"

    // mlkit face detection & gson
    implementation "com.google.mlkit:face-detection:16.1.5"
    implementation "com.google.code.gson:gson:2.8.6"

    // tflite
    implementation("org.tensorflow:tensorflow-lite:2.4.0") { changing = true }
    implementation("org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly") { changing = true }
    implementation("org.tensorflow:tensorflow-lite-support:0.0.0-nightly") { changing = true }

    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'




}


// Apply the Google Services Gradle plugin at the bottom
apply plugin: 'com.google.gms.google-services'
